force-app/main/default/objects/leankor__AutomationTemplate__c/leankor__AutomationTemplate__c.object-meta.xml
<CustomObject>
    <description>This is a template object for Automation Flow .</description>
    <label>Automation Template</label>
    <nameField>
        <displayFormat>AT-{00000000}</displayFormat>
        <label>Automation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AutomationTemplates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>