force-app/main/default/objects/leankor__AutomationTemplate__c/fields/leankor__Account__c.field-meta.xml
<CustomField>
    <fullName>leankor__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup on Account</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AutomationTemplates</relationshipLabel>
    <relationshipName>AutomationTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>