force-app/main/default/objects/leankor__AutomationTemplate__c/fields/leankor__ColumnTitle__c.field-meta.xml
<CustomField>
    <fullName>leankor__ColumnTitle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Column Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>