force-app/main/default/objects/leankor__AutomationTemplate__c/fields/leankor__EndDate__c.field-meta.xml
<CustomField>
    <fullName>leankor__EndDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Template End Date</label>
    <type>DateTime</type>
</CustomField>