force-app/main/default/objects/leankor__AutomationTemplate__c/fields/leankor__JSONData__c.field-meta.xml
<CustomField>
    <fullName>leankor__JSONData__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>JSONData</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>