force-app/main/default/objects/leankor__AutomationTemplate__c/fields/leankor__JSONDefinition__c.field-meta.xml
<CustomField>
    <fullName>leankor__JSONDefinition__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>JSON Definition</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>