force-app/main/default/objects/leankor__AutomationTemplate__c/fields/leankor__ProjectRoomLink__c.field-meta.xml
<CustomField>
    <fullName>leankor__ProjectRoomLink__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Room Link</label>
    <referenceTo>leankor__ProjectRoom__c</referenceTo>
    <relationshipLabel>AutomationTemplates (Project Room To Link)</relationshipLabel>
    <relationshipName>AutomationTemplates1</relationshipName>
    <type>Lookup</type>
</CustomField>