force-app/main/default/objects/leankor__AutomationTemplate__c/fields/leankor__RecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>leankor__RecordTypeID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Type ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>