force-app/main/default/objects/leankor__AutomationTemplate__c/fields/leankor__RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>leankor__RecordTypeName__c</fullName>
    <description>Text field For Record Type</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>