force-app/main/default/objects/leankor__AutomationTemplate__c/fields/leankor__RoleId__c.field-meta.xml
<CustomField>
    <fullName>leankor__RoleId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Role ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>