force-app/main/default/objects/leankor__AutomationTemplate__c/fields/leankor__StageName__c.field-meta.xml
<CustomField>
    <fullName>leankor__StageName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Stage Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>