force-app/main/default/objects/leankor__AutomationTemplate__c/fields/leankor__StartDate__c.field-meta.xml
<CustomField>
    <fullName>leankor__StartDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Template Start Date</label>
    <type>DateTime</type>
</CustomField>