force-app/main/default/objects/leankor__AutomationTemplate__c/fields/leankor__ValueStream__c.field-meta.xml
<CustomField>
    <fullName>leankor__ValueStream__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Board</label>
    <referenceTo>leankor__ValueStream__c</referenceTo>
    <relationshipLabel>AutomationTemplates</relationshipLabel>
    <relationshipName>AutomationTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>