force-app/main/default/objects/leankor__AutomationTemplate__c/fields/leankor__ValueStreamCardLink__c.field-meta.xml
<CustomField>
    <fullName>leankor__ValueStreamCardLink__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Value Stream Card Link</label>
    <referenceTo>leankor__KanbanCard__c</referenceTo>
    <relationshipLabel>AutomationTemplates</relationshipLabel>
    <relationshipName>AutomationTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>