force-app/main/default/objects/leankor__AutomationTemplate__c/fields/leankor__ValueStreamLink__c.field-meta.xml
<CustomField>
    <fullName>leankor__ValueStreamLink__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Value Stream Link</label>
    <referenceTo>leankor__ValueStream__c</referenceTo>
    <relationshipLabel>AutomationTemplates (Name Of Project Board To Link)</relationshipLabel>
    <relationshipName>AutomationTemplates1</relationshipName>
    <type>Lookup</type>
</CustomField>