force-app/main/default/objects/leankor__AutomationTemplate__c/fields/leankor__Zone__c.field-meta.xml
<CustomField>
    <fullName>leankor__Zone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zone</label>
    <referenceTo>leankor__Zone__c</referenceTo>
    <relationshipLabel>AutomationTemplates</relationshipLabel>
    <relationshipName>AutomationTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>